// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File parser extracts query AST correctly from files: panicOnBuild 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Using the global \`graphql\` tag for Gatsby's queries isn't supported as of v3.
Import it instead like:  import { graphql } from 'gatsby' in file:
global-query.js",
    ],
    Array [
      "Using the global \`graphql\` tag for Gatsby's queries isn't supported as of v3.
Import it instead like:  import { graphql } from 'gatsby' in file:
global-static-query-hooks.js",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`File parser extracts query AST correctly from files: results 1`] = `
Object {
  "0": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 30,
            "start": 1,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 20,
              "start": 7,
            },
            "value": "PageQueryName",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 30,
              "start": 21,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 28,
                  "start": 25,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 28,
                    "start": 25,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 31,
        "start": 0,
      },
    },
    "filePath": "page-query.js",
    "hash": 3530286846,
    "isHook": false,
    "isStaticQuery": false,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 0,
        "line": 6,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 33,
        "line": 2,
      },
    },
    "text": "query PageQueryName{foo}",
  },
  "1": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 34,
            "start": 1,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 24,
              "start": 7,
            },
            "value": "PageQueryIndirect",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 34,
              "start": 25,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 32,
                  "start": 29,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 32,
                    "start": 29,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 35,
        "start": 0,
      },
    },
    "filePath": "page-query-indirect.js",
    "hash": 1314068098,
    "isHook": false,
    "isStaticQuery": false,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 0,
        "line": 6,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 26,
        "line": 2,
      },
    },
    "text": "query PageQueryIndirect{foo}",
  },
  "10": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "FragmentDefinition",
          "loc": Object {
            "end": 53,
            "start": 3,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 12,
            },
            "value": "Fragment1",
          },
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 53,
              "start": 40,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 49,
                  "start": 46,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 49,
                    "start": 46,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "typeCondition": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 39,
              "start": 25,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 39,
                "start": 25,
              },
              "value": "RootQueryField",
            },
          },
        },
        Object {
          "directives": Array [],
          "kind": "FragmentDefinition",
          "loc": Object {
            "end": 106,
            "start": 56,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 74,
              "start": 65,
            },
            "value": "Fragment2",
          },
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 106,
              "start": 93,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 102,
                  "start": 99,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 102,
                    "start": 99,
                  },
                  "value": "bar",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "typeCondition": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 92,
              "start": 78,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 92,
                "start": 78,
              },
              "value": "RootQueryField",
            },
          },
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 107,
        "start": 0,
      },
    },
    "filePath": "multiple-fragment-exports.js",
    "hash": 1171727280,
    "isHook": false,
    "isStaticQuery": false,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 0,
        "line": 9,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 35,
        "line": 2,
      },
    },
    "text": "fragment Fragment1 on RootQueryField{foo}fragment Fragment2 on RootQueryField{bar}",
  },
  "11": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "FragmentDefinition",
          "loc": Object {
            "end": 53,
            "start": 3,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 12,
            },
            "value": "Fragment3",
          },
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 53,
              "start": 40,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 49,
                  "start": 46,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 49,
                    "start": 46,
                  },
                  "value": "baz",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "typeCondition": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 39,
              "start": 25,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 39,
                "start": 25,
              },
              "value": "RootQueryField",
            },
          },
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 54,
        "start": 0,
      },
    },
    "filePath": "multiple-fragment-exports.js",
    "hash": 3923246124,
    "isHook": false,
    "isStaticQuery": false,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 0,
        "line": 14,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 33,
        "line": 10,
      },
    },
    "text": "fragment Fragment3 on RootQueryField{baz}",
  },
  "12": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 74,
            "start": 3,
          },
          "name": Object {
            "kind": "Name",
            "value": "fragmentShorthandJs3159585216",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 74,
              "start": 9,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 70,
                  "start": 15,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 19,
                    "start": 15,
                  },
                  "value": "site",
                },
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "loc": Object {
                    "end": 70,
                    "start": 20,
                  },
                  "selections": Array [
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "loc": Object {
                        "end": 64,
                        "start": 28,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 40,
                          "start": 28,
                        },
                        "value": "siteMetadata",
                      },
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "loc": Object {
                          "end": 64,
                          "start": 41,
                        },
                        "selections": Array [
                          Object {
                            "alias": undefined,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "loc": Object {
                              "end": 56,
                              "start": 51,
                            },
                            "name": Object {
                              "kind": "Name",
                              "loc": Object {
                                "end": 56,
                                "start": 51,
                              },
                              "value": "title",
                            },
                            "selectionSet": undefined,
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 75,
        "start": 0,
      },
    },
    "filePath": "fragment-shorthand.js",
    "hash": 3159585216,
    "isHook": false,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 0,
        "line": 12,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 22,
        "line": 4,
      },
    },
    "text": "query{site{siteMetadata{title}}}",
  },
  "13": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 47,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "value": "queryInSeparateVariableJs1528532020",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 47,
              "start": 0,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 46,
                  "start": 2,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 19,
                    "start": 2,
                  },
                  "value": "allMarkdownRemark",
                },
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "loc": Object {
                    "end": 46,
                    "start": 20,
                  },
                  "selections": Array [
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "loc": Object {
                        "end": 45,
                        "start": 22,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 26,
                          "start": 22,
                        },
                        "value": "blah",
                      },
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "loc": Object {
                          "end": 45,
                          "start": 27,
                        },
                        "selections": Array [
                          Object {
                            "alias": undefined,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "loc": Object {
                              "end": 44,
                              "start": 29,
                            },
                            "name": Object {
                              "kind": "Name",
                              "loc": Object {
                                "end": 33,
                                "start": 29,
                              },
                              "value": "node",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "loc": Object {
                                "end": 44,
                                "start": 34,
                              },
                              "selections": Array [
                                Object {
                                  "alias": undefined,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "loc": Object {
                                    "end": 42,
                                    "start": 36,
                                  },
                                  "name": Object {
                                    "kind": "Name",
                                    "loc": Object {
                                      "end": 42,
                                      "start": 36,
                                    },
                                    "value": "cheese",
                                  },
                                  "selectionSet": undefined,
                                },
                              ],
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 47,
        "start": 0,
      },
    },
    "filePath": "query-in-separate-variable.js",
    "hash": 1528532020,
    "isHook": false,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 69,
        "line": 4,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 22,
        "line": 4,
      },
    },
    "text": "{allMarkdownRemark{blah{node{cheese}}}}",
  },
  "14": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 49,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "value": "queryInSeparateVariable2Js278713111",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 49,
              "start": 0,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 48,
                  "start": 2,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 21,
                    "start": 2,
                  },
                  "value": "allStrangeQueryName",
                },
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "loc": Object {
                    "end": 48,
                    "start": 22,
                  },
                  "selections": Array [
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "loc": Object {
                        "end": 47,
                        "start": 24,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 28,
                          "start": 24,
                        },
                        "value": "blah",
                      },
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "loc": Object {
                          "end": 47,
                          "start": 29,
                        },
                        "selections": Array [
                          Object {
                            "alias": undefined,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "loc": Object {
                              "end": 46,
                              "start": 31,
                            },
                            "name": Object {
                              "kind": "Name",
                              "loc": Object {
                                "end": 35,
                                "start": 31,
                              },
                              "value": "node",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "loc": Object {
                                "end": 46,
                                "start": 36,
                              },
                              "selections": Array [
                                Object {
                                  "alias": undefined,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "loc": Object {
                                    "end": 44,
                                    "start": 38,
                                  },
                                  "name": Object {
                                    "kind": "Name",
                                    "loc": Object {
                                      "end": 44,
                                      "start": 38,
                                    },
                                    "value": "cheese",
                                  },
                                  "selectionSet": undefined,
                                },
                              ],
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 49,
        "start": 0,
      },
    },
    "filePath": "query-in-separate-variable-2.js",
    "hash": 278713111,
    "isHook": false,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 82,
        "line": 5,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 33,
        "line": 5,
      },
    },
    "text": "{allStrangeQueryName{blah{node{cheese}}}}",
  },
  "15": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 29,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 6,
            },
            "value": "StaticQueryName",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 29,
              "start": 22,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 27,
                  "start": 24,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 29,
        "start": 0,
      },
    },
    "filePath": "static-query-hooks.js",
    "hash": 2687344169,
    "isHook": true,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 67,
        "line": 3,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 38,
        "line": 3,
      },
    },
    "text": "query StaticQueryName{foo}",
  },
  "16": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 29,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 6,
            },
            "value": "StaticQueryName",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 29,
              "start": 22,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 27,
                  "start": 24,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 29,
        "start": 0,
      },
    },
    "filePath": "static-query-hooks-with-other-export.js",
    "hash": 2687344169,
    "isHook": true,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 67,
        "line": 4,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 38,
        "line": 4,
      },
    },
    "text": "query StaticQueryName{foo}",
  },
  "17": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 29,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 6,
            },
            "value": "StaticQueryName",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 29,
              "start": 22,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 27,
                  "start": 24,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 29,
        "start": 0,
      },
    },
    "filePath": "static-query-hooks-alternative-import.js",
    "hash": 2687344169,
    "isHook": true,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 81,
        "line": 3,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 52,
        "line": 3,
      },
    },
    "text": "query StaticQueryName{foo}",
  },
  "18": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 29,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 6,
            },
            "value": "StaticQueryName",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 29,
              "start": 22,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 27,
                  "start": 24,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 29,
        "start": 0,
      },
    },
    "filePath": "static-query-hooks-with-type-parameter.ts",
    "hash": 2687344169,
    "isHook": true,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 82,
        "line": 3,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 53,
        "line": 3,
      },
    },
    "text": "query StaticQueryName{foo}",
  },
  "19": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 47,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "value": "staticQueryHooksInSeparateVariableJs1528532020",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 47,
              "start": 0,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 46,
                  "start": 2,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 19,
                    "start": 2,
                  },
                  "value": "allMarkdownRemark",
                },
                "selectionSet": Object {
                  "kind": "SelectionSet",
                  "loc": Object {
                    "end": 46,
                    "start": 20,
                  },
                  "selections": Array [
                    Object {
                      "alias": undefined,
                      "arguments": Array [],
                      "directives": Array [],
                      "kind": "Field",
                      "loc": Object {
                        "end": 45,
                        "start": 22,
                      },
                      "name": Object {
                        "kind": "Name",
                        "loc": Object {
                          "end": 26,
                          "start": 22,
                        },
                        "value": "blah",
                      },
                      "selectionSet": Object {
                        "kind": "SelectionSet",
                        "loc": Object {
                          "end": 45,
                          "start": 27,
                        },
                        "selections": Array [
                          Object {
                            "alias": undefined,
                            "arguments": Array [],
                            "directives": Array [],
                            "kind": "Field",
                            "loc": Object {
                              "end": 44,
                              "start": 29,
                            },
                            "name": Object {
                              "kind": "Name",
                              "loc": Object {
                                "end": 33,
                                "start": 29,
                              },
                              "value": "node",
                            },
                            "selectionSet": Object {
                              "kind": "SelectionSet",
                              "loc": Object {
                                "end": 44,
                                "start": 34,
                              },
                              "selections": Array [
                                Object {
                                  "alias": undefined,
                                  "arguments": Array [],
                                  "directives": Array [],
                                  "kind": "Field",
                                  "loc": Object {
                                    "end": 42,
                                    "start": 36,
                                  },
                                  "name": Object {
                                    "kind": "Name",
                                    "loc": Object {
                                      "end": 42,
                                      "start": 36,
                                    },
                                    "value": "cheese",
                                  },
                                  "selectionSet": undefined,
                                },
                              ],
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 47,
        "start": 0,
      },
    },
    "filePath": "static-query-hooks-in-separate-variable.js",
    "hash": 1528532020,
    "isHook": true,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 69,
        "line": 4,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 22,
        "line": 4,
      },
    },
    "text": "{allMarkdownRemark{blah{node{cheese}}}}",
  },
  "2": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 35,
            "start": 1,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 25,
              "start": 7,
            },
            "value": "PageQueryIndirect2",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 35,
              "start": 26,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 33,
                  "start": 30,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 33,
                    "start": 30,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 36,
        "start": 0,
      },
    },
    "filePath": "page-query-indirect-2.js",
    "hash": 1258001265,
    "isHook": false,
    "isStaticQuery": false,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 0,
        "line": 6,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 26,
        "line": 2,
      },
    },
    "text": "query PageQueryIndirect2{foo}",
  },
  "20": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 13,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "value": "zhADollarpercentandJs1125018085",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 13,
              "start": 6,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 11,
                  "start": 8,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 11,
                    "start": 8,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 13,
        "start": 0,
      },
    },
    "filePath": "ж-ä-!@#$%^&*()_-=+:;'\\"?,~\`.js",
    "hash": 1125018085,
    "isHook": true,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 51,
        "line": 3,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 38,
        "line": 3,
      },
    },
    "text": "query{foo}",
  },
  "21": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 13,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "value": "staticZhADollarpercentandJs1125018085",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 13,
              "start": 6,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 11,
                  "start": 8,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 11,
                    "start": 8,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 13,
        "start": 0,
      },
    },
    "filePath": "static-ж-ä-!@#$%^&*()_-=+:;'\\"?,~\`.js",
    "hash": 1125018085,
    "isHook": false,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 32,
        "line": 4,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 19,
        "line": 4,
      },
    },
    "text": "query{foo}",
  },
  "3": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 16,
            "start": 1,
          },
          "name": Object {
            "kind": "Name",
            "value": "pageQueryNoNameJs1125018085",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 16,
              "start": 7,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 14,
                  "start": 11,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 14,
                    "start": 11,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 17,
        "start": 0,
      },
    },
    "filePath": "page-query-no-name.js",
    "hash": 1125018085,
    "isHook": false,
    "isStaticQuery": false,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 0,
        "line": 6,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 31,
        "line": 2,
      },
    },
    "text": "query{foo}",
  },
  "4": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 29,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 6,
            },
            "value": "StaticQueryName",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 29,
              "start": 22,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 27,
                  "start": 24,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 29,
        "start": 0,
      },
    },
    "filePath": "static-query.js",
    "hash": 2687344169,
    "isHook": false,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 48,
        "line": 4,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 19,
        "line": 4,
      },
    },
    "text": "query StaticQueryName{foo}",
  },
  "5": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 7,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "value": "staticQueryNoNameJs3221935794",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 7,
              "start": 0,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 5,
                  "start": 2,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 5,
                    "start": 2,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 7,
        "start": 0,
      },
    },
    "filePath": "static-query-no-name.js",
    "hash": 3221935794,
    "isHook": false,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 26,
        "line": 4,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 19,
        "line": 4,
      },
    },
    "text": "{foo}",
  },
  "6": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 29,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 6,
            },
            "value": "StaticQueryName",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 29,
              "start": 22,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 27,
                  "start": 24,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 29,
        "start": 0,
      },
    },
    "filePath": "static-query-named-export.js",
    "hash": 2687344169,
    "isHook": false,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 48,
        "line": 4,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 19,
        "line": 4,
      },
    },
    "text": "query StaticQueryName{foo}",
  },
  "7": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 7,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "value": "staticQueryClosingTagJs3221935794",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 7,
              "start": 0,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 5,
                  "start": 2,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 5,
                    "start": 2,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 7,
        "start": 0,
      },
    },
    "filePath": "static-query-closing-tag.js",
    "hash": 3221935794,
    "isHook": false,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 26,
        "line": 4,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 19,
        "line": 4,
      },
    },
    "text": "{foo}",
  },
  "8": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 29,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 21,
              "start": 6,
            },
            "value": "StaticQueryName",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 29,
              "start": 22,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 27,
                  "start": 24,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 27,
                    "start": 24,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 29,
        "start": 0,
      },
    },
    "filePath": "page-query-and-static-query-named-export.js",
    "hash": 2687344169,
    "isHook": false,
    "isStaticQuery": true,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 48,
        "line": 4,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 19,
        "line": 4,
      },
    },
    "text": "query StaticQueryName{foo}",
  },
  "9": Object {
    "doc": Object {
      "definitions": Array [
        Object {
          "directives": Array [],
          "kind": "OperationDefinition",
          "loc": Object {
            "end": 27,
            "start": 0,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 19,
              "start": 6,
            },
            "value": "PageQueryName",
          },
          "operation": "query",
          "selectionSet": Object {
            "kind": "SelectionSet",
            "loc": Object {
              "end": 27,
              "start": 20,
            },
            "selections": Array [
              Object {
                "alias": undefined,
                "arguments": Array [],
                "directives": Array [],
                "kind": "Field",
                "loc": Object {
                  "end": 25,
                  "start": 22,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 25,
                    "start": 22,
                  },
                  "value": "foo",
                },
                "selectionSet": undefined,
              },
            ],
          },
          "variableDefinitions": Array [],
        },
      ],
      "kind": "Document",
      "loc": Object {
        "end": 27,
        "start": 0,
      },
    },
    "filePath": "page-query-and-static-query-named-export.js",
    "hash": 3530286846,
    "isHook": false,
    "isStaticQuery": false,
    "templateLoc": SourceLocation {
      "end": Position {
        "column": 60,
        "line": 8,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 33,
        "line": 8,
      },
    },
    "text": "query PageQueryName{foo}",
  },
}
`;

exports[`File parser extracts query AST correctly from files: warn 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "
We were unable to find the declaration of variable \\"strangeQueryName\\", which you passed as the \\"query\\" prop into the <StaticQuery> declaration in \\"query-not-defined.js\\".

Perhaps the variable name has a typo?

Also note that we are currently unable to use queries defined in files other than the file where the <StaticQuery> is defined. If you're attempting to import the query, please move it into \\"query-not-defined.js\\". If being able to import queries from another file is an important capability for you, we invite your help fixing it.
",
    ],
    Array [
      "
We were unable to find the declaration of variable \\"strangeQueryName\\", which you passed as the \\"query\\" prop into the <StaticQuery> declaration in \\"query-imported.js\\".

Perhaps the variable name has a typo?

Also note that we are currently unable to use queries defined in files other than the file where the <StaticQuery> is defined. If you're attempting to import the query, please move it into \\"query-imported.js\\". If being able to import queries from another file is an important capability for you, we invite your help fixing it.
",
    ],
    Array [
      "
We were unable to find the declaration of variable \\"strangeQueryName\\", which you passed as the \\"query\\" prop into the useStaticQuery declaration in \\"static-query-hooks-not-defined.js\\".

Perhaps the variable name has a typo?

Also note that we are currently unable to use queries defined in files other than the file where the useStaticQuery is defined. If you're attempting to import the query, please move it into \\"static-query-hooks-not-defined.js\\". If being able to import queries from another file is an important capability for you, we invite your help fixing it.
",
    ],
    Array [
      "
We were unable to find the declaration of variable \\"strangeQueryName\\", which you passed as the \\"query\\" prop into the useStaticQuery declaration in \\"static-query-hooks-imported.js\\".

Perhaps the variable name has a typo?

Also note that we are currently unable to use queries defined in files other than the file where the useStaticQuery is defined. If you're attempting to import the query, please move it into \\"static-query-hooks-imported.js\\". If being able to import queries from another file is an important capability for you, we invite your help fixing it.
",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
